src/app/shared/search/search-result.scss
@import 'node_modules/@hmcts/ccd-case-ui-toolkit/dist/cut-styles/components/typography';
@import 'node_modules/govuk_frontend_toolkit/stylesheets/_shims';
@import 'node_modules/govuk_frontend_toolkit/stylesheets/_conditionals';
@import 'node_modules/govuk_frontend_toolkit/stylesheets/_measurements';
//@import '~font-awesome/scss/font-awesome';

$blue_table: #005ea5;
$blue_pagination: #005da6;
$black: #231F20;

table {
  table-layout: fixed;

  thead tr th {
    padding-left: 10px;
    padding-right: 10px;
    vertical-align: top;
  }

  tbody tr td {
    padding-left: 10px;
    padding-right: 10px;
    @include core-14pt;

    word-wrap: break-word;

    a {
      color: $blue_table;
      background-color: $white;
      outline: none;
    }

  }
}

div {
  padding: 30px 0px 30px 0px;
}

.pagination /deep/ .ngx-pagination {
  padding-top: 25px;
  text-decoration: none;
  text-align: center;
  @include core-14pt;

  @include media(desktop) {
    @include core-14pt;
  }
  a {
    color: $blue_pagination;
  }
  a:hover {
    background: white;
  }
  .current {
    background-color: $white;
    color: #4C2C92;
  }

  .disabled {
    display: none;
  }

  .pagination-previous a::before {
    font-family: FontAwesome;
    content: '\f104';
  }

  .pagination-next a::after {
    font-family: FontAwesome;
    content: '\f105';
  }
}

.notification {
  text-align: center;
}

.search-result-column-header {
  width: unset;
  table-layout: normal;
  div {
    display: table-cell;
    width: auto;
    padding: 0px;
    @media screen and (max-width: 379px) {
      display: block;
      float: right;
    }
  }
}

.search-result-column-label {
  @include bold-16pt;
  word-wrap: break-word;
}

.search-result-column-sort {
  font-size: 12pt;
}

.sort-widget {
  cursor: pointer;
  padding-left: 15px;
}

